# TICK_demo

./: .gitignore  README.md
GICK-Stack/: build.sh  docker-compose.yaml  mosquitto.conf
GICK-Stack/kapacitor/: Dockerfile
Kapacitor-examples/: README.md  pg_bouncer_maxwait.tick  pg_max_connection.tick  pg_max_wait.tick  qgis_status.tick  requests_rate.tick
docker-gick-stack/: README.md  deploy.sh  kapacitor.conf  undeploy.sh
docker-rpi-ickn-stack/: README.md
docker-tick-stack/: docker-compose.yaml
docker-tick-stack-2-1/: README.md
docker-tick-stack-2-2/: README.md
docker-tick-stack-3/: README.md  docker-compose.yml  influxdb.conf  telegraf.conf
docker-tick-stack3/: .gitignore  docker-compose.yml
docker-tick2/: README.md
docker-tigk-stack/: README.md
docker_tick_stack_2_1/: README.md  dc-bak.yml  docker-compose.yml  kapacitor.conf  telegraf.conf
kapacitor-python3-api/: Dockerfile
kapacitor_arima_udf/: requirements.txt
kapacitor_prophet_udf/: README.md
kapacitor_udf_arima/: README.md  arima.py
kapacitor_udf_arima/model/: model.py
kapacitor_udf_go/: README.md
stream-data-processor-c/: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  apply_clang_format.sh  test_script.sh
stream-data-processor-c/docs/: build-from-source.md  computation-graph.md  udf-implementation.md  udf-user-guide.md
stream-data-processor-c/examples/: CMakeLists.txt  tick_script_adapted.cpp
stream-data-processor-c/examples/aggregate_udf/: README.md  cpu.tick  docker-compose.yml  influxdb.conf  kapacitor.conf
stream-data-processor-c/examples/derivative_udf/: README.md  collectd.conf  derivative.tick  docker-compose.yml  kapacitor.conf
stream-data-processor-c/examples/dynamic_window_udf/: README.md  docker-compose.yml  dynamic_window.tick  kapacitor.conf
stream-data-processor-c/examples/dynamic_window_udf/cpus/: 0.yml  1.yml
stream-data-processor-c/examples/threshold_udf/: README.md  kapacitor.conf  level.tick
stream-data-processor-c/src/: CMakeLists.txt
stream-data-processor-c/src/consumers/: consumer.h  consumers.h  print_consumer.cpp  print_consumer.h  publisher_consumer.cpp  publisher_consumer.h  tcp_consumer.cpp  tcp_consumer.h
stream-data-processor-c/src/kapacitor_udf/: kapacitor_udf.h  main.cpp  udf.proto  udf_agent.cpp  udf_agent.h  udf_agent_client_factory.h
stream-data-processor-c/src/kapacitor_udf/request_handlers/: batch_request_handler.cpp  batch_request_handler.h  derivative_request_handler.cpp  derivative_request_handler.h  dynamic_window_request_handler.cpp  dynamic_window_request_handler.h  invalid_option_exception.h  logging_request_handler.cpp  logging_request_handler.h  record_batch_request_handler.cpp  record_batch_request_handler.h  request_handler.cpp  request_handler.h  request_handlers.h  stateful_threshold_request_handler.cpp  stateful_threshold_request_handler.h  stream_request_handler.cpp  stream_request_handler.h
stream-data-processor-c/src/kapacitor_udf/request_handlers/aggregate_request_handlers/: aggregate_options_parser.cpp  aggregate_options_parser.h  batch_aggregate_request_handler.cpp  batch_aggregate_request_handler.h  stream_aggregate_request_handler.cpp  stream_aggregate_request_handler.h
stream-data-processor-c/src/kapacitor_udf/utils/: grouping_utils.cpp  grouping_utils.h  points_converter.cpp  points_converter.h  points_storage.cpp  points_storage.h  rw_utils.cpp  rw_utils.h
stream-data-processor-c/src/metadata/: column_typing.cpp  column_typing.h  grouping.cpp  grouping.h  help.cpp  help.h  metadata.h  metadata.proto  time_metadata.cpp  time_metadata.h
stream-data-processor-c/src/node_pipeline/: node_pipeline.cpp  node_pipeline.h
stream-data-processor-c/src/nodes/: eval_node.cpp  eval_node.h  node.cpp  node.h  nodes.h
stream-data-processor-c/src/nodes/data_handlers/: data_handler.cpp  data_handler.h  data_handlers.h  data_parser.cpp  data_parser.h  serialized_record_batch_handler.cpp  serialized_record_batch_handler.h
stream-data-processor-c/src/nodes/data_handlers/parsers/: csv_parser.cpp  csv_parser.h  graphite_parser.cpp  graphite_parser.h  parser.cpp  parser.h
stream-data-processor-c/src/producers/: producer.h  producers.h  subscriber_producer.cpp  subscriber_producer.h  tcp_producer.cpp  tcp_producer.h
stream-data-processor-c/src/record_batch_handlers/: aggregate_handler.cpp  aggregate_handler.h  default_handler.cpp  default_handler.h  filter_handler.cpp  filter_handler.h  group_dispatcher.cpp  group_dispatcher.h  group_handler.cpp  group_handler.h  join_handler.cpp  join_handler.h  log_handler.cpp  log_handler.h  map_handler.cpp  map_handler.h  pipeline_handler.cpp  pipeline_handler.h  record_batch_handler.cpp  record_batch_handler.h  record_batch_handlers.h  sort_handler.cpp  sort_handler.h
stream-data-processor-c/src/record_batch_handlers/aggregate_functions/: aggregate_function.cpp  aggregate_function.h  aggregate_functions.cpp  aggregate_functions.h
stream-data-processor-c/src/record_batch_handlers/stateful_handlers/: derivative_handler.cpp  derivative_handler.h  handler_factory.cpp  handler_factory.h  threshold_state_machine.cpp  threshold_state_machine.h  window_handler.cpp  window_handler.h
stream-data-processor-c/src/server/: unix_socket_client.cpp  unix_socket_client.h  unix_socket_server.cpp  unix_socket_server.h
stream-data-processor-c/src/utils/: arrow_utils.cpp  arrow_utils.h  compute_utils.cpp  compute_utils.h  convert_utils.cpp  convert_utils.h  serialize_utils.cpp  serialize_utils.h  string_utils.cpp  string_utils.h  time_utils.cpp  time_utils.h  transport_utils.cpp  transport_utils.h  utils.h  uvarint_utils.cpp  uvarint_utils.h
stream-data-processor-c/test/: CMakeLists.txt  aggregate_functions_test.cpp  gmock_catch_interceptor.cpp  gmock_catch_interceptor.h  kapacitor_udf_test.cpp  metadata_test.cpp  parsers_test.cpp  record_batch_builder.cpp  record_batch_builder.h  record_batch_handlers_test.cpp  test_help.h  test_main.cpp  utils_test.cpp  uvarint_test.cpp
tick-stack/: README.md
(+6 files in other folders)
